--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost/mvn_dataSiswa
 spring.datasource.username=root
-spring.datasource.password=heggies10
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
